--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ write NEXT for the next batter when there is the third out -->
 
 	<br>
 
-	<input type="text" size="10" placeholder=" TEAM " value="TEAM"
+	<input type="text" size="10" placeholder="TEAM"
 		style="text-transform: uppercase" id="teambot"> VS&nbsp;
 	<input type="text" size="10" placeholder="PITCHER"
 		style="text-transform: uppercase" id="pitcherbot">
