--- a/index.html
+++ b/index.html
@@ -14,11 +14,119 @@
 <br><br><br>
 <h2>A WAY TO SCORE A SPORTS GAME OVER THE WEB</h2>
 
-<a href="baseball_scoresheet.html">Baseball scoring page</a>
+
+
+<div>
+
+
+<div>
+
+Enter Baseball Visitor Team and Pitcher
+<br>
+<input type="text" size="15" placeholder="VISITORTEAM"
+		style="text-transform: uppercase" id="teamtop">
+		<br>
+<input type="text" size="15" placeholder="HOMEPITCHER"
+		style="text-transform: uppercase" id="pitchertop">
+		<br>
+Enter Baseball Visitor Lineup
+<br>
+<input type="text" placeholder="1" style="text-transform: uppercase" maxlength="12" size="8" id="top1">
+<br>
+<input type="text" placeholder="2" style="text-transform: uppercase" maxlength="12" size="8" id="top2">
+<br>
+<input type="text" placeholder="3" style="text-transform: uppercase" maxlength="12" size="8" id="top3">
+<br>
+<input type="text" placeholder="4" style="text-transform: uppercase" maxlength="12" size="8" id="top4">
+<br>
+<input type="text" placeholder="5" style="text-transform: uppercase" maxlength="12" size="8" id="top5">
+<br>
+<input type="text" placeholder="6" style="text-transform: uppercase" maxlength="12" size="8" id="top6">
+<br>
+<input type="text" placeholder="7" style="text-transform: uppercase" maxlength="12" size="8" id="top7">
+<br>
+<input type="text" placeholder="8" style="text-transform: uppercase" maxlength="12" size="8" id="top8">
+<br>
+<input type="text" placeholder="9" style="text-transform: uppercase" maxlength="12" size="8" id="top9">
 <br><br>
-<a href="football_scoresheet.html">Baseball scoring page</a>
 
+		
+</div>
 
+Enter Baseball Home Team and Pitcher
+<br>
+<input type="text" size="15" placeholder="HOMETEAM"
+		style="text-transform: uppercase" id="teambot">
+		<br>
+		<input type="text" size="15" placeholder="VISITORPITCHER"
+		style="text-transform: uppercase" id="pitcherbot">
+		<br>
+Enter Baseball Visitor Lineup
+<br>
+<input type="text" placeholder="1" style="text-transform: uppercase" maxlength="12" size="8" id="bot1">
+<br>
+<input type="text" placeholder="2" style="text-transform: uppercase" maxlength="12" size="8" id="bot2">
+<br>
+<input type="text" placeholder="3" style="text-transform: uppercase" maxlength="12" size="8" id="bot3">
+<br>
+<input type="text" placeholder="4" style="text-transform: uppercase" maxlength="12" size="8" id="bot4">
+<br>
+<input type="text" placeholder="5" style="text-transform: uppercase" maxlength="12" size="8" id="bot5">
+<br>
+<input type="text" placeholder="6" style="text-transform: uppercase" maxlength="12" size="8" id="bot6">
+<br>
+<input type="text" placeholder="7" style="text-transform: uppercase" maxlength="12" size="8" id="bot7">
+<br>
+<input type="text" placeholder="8" style="text-transform: uppercase" maxlength="12" size="8" id="bot8">
+<br>
+<input type="text" placeholder="9" style="text-transform: uppercase" maxlength="12" size="8" id="bot9">
+<br><br>
+<button onclick="StartFresh();">START FRESH</button>
+	<button onclick="recallStoreT(); recallStoreB();" id="recallStore">RECALL
+		STORAGE</button>
+		
+	<button onclick="StoreVisitorTeamT(); StoreHomeTeamB();" id="saveLocalT">STORE DATA</button>
+</div>
+<script>
+function StoreVisitorTeamT() {
+	localStorage.setItem("teamT", document.getElementById('teamtop').value);
+	localStorage.setItem("pitcherT", document.getElementById('pitchertop').value);
+	
+	localStorage.setItem("top1", document.getElementById('top1').value);
+	localStorage.setItem("top2", document.getElementById('top2').value);
+	localStorage.setItem("top3", document.getElementById('top3').value);
+	localStorage.setItem("top4", document.getElementById('top4').value);
+	localStorage.setItem("top5", document.getElementById('top5').value);
+	localStorage.setItem("top6", document.getElementById('top6').value);
+	localStorage.setItem("top7", document.getElementById('top7').value);
+	localStorage.setItem("top8", document.getElementById('top8').value);
+	localStorage.setItem("top9", document.getElementById('top9').value);
+}
+
+function StoreHomeTeamB() {
+	localStorage.setItem("teamB", document.getElementById('teambot').value);
+	localStorage.setItem("pitcherB", document.getElementById('pitcherbot').value);
+	
+	localStorage.setItem("bot1", document.getElementById('bot1').value);
+	localStorage.setItem("bot2", document.getElementById('bot2').value);
+	localStorage.setItem("bot3", document.getElementById('bot3').value);
+	localStorage.setItem("bot4", document.getElementById('bot4').value);
+	localStorage.setItem("bot5", document.getElementById('bot5').value);
+	localStorage.setItem("bot6", document.getElementById('bot6').value);
+	localStorage.setItem("bot7", document.getElementById('bot7').value);
+	localStorage.setItem("bot8", document.getElementById('bot8').value);
+	localStorage.setItem("bot9", document.getElementById('bot9').value);
+}
+
+function StartFresh() {
+	localStorage.clear();
+}
+</script>
+<br>
+<a href="baseball_scoresheet.html">Baseball Scoring Page</a>
+<br><br><br><br>
+<a href="football_scoresheet.html">Football Scoring Page</a>
+<br><br><br><br>
 
 </body>
 </html>
