--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@ function StoreVisitorTeamT() {
 	localStorage.setItem("top7", document.getElementById('top7').value);
 	localStorage.setItem("top8", document.getElementById('top8').value);
 	localStorage.setItem("top9", document.getElementById('top9').value);
+	
+	localStorage.setItem("ballsT", 0);
+	localStorage.setItem("strikesT", 0);
+	localStorage.setItem("foulsT", 0);
 }
 
 function StoreHomeTeamB() {
@@ -116,6 +120,10 @@ function StoreHomeTeamB() {
 	localStorage.setItem("bot7", document.getElementById('bot7').value);
 	localStorage.setItem("bot8", document.getElementById('bot8').value);
 	localStorage.setItem("bot9", document.getElementById('bot9').value);
+	
+	localStorage.setItem("ballsB", 0);
+	localStorage.setItem("strikesB", 0);
+	localStorage.setItem("foulsB", 0);
 }
 
 function StartFresh() {
