--- a/index.html
+++ b/index.html
@@ -290,6 +290,12 @@
 					document.getElementById("bot9").focus();
 					count++;
 					break;
+				case 21:
+					StoreVisitorTeamT();
+					StoreHomeTeamB();
+					document.getElementById('baseball_link').click();
+					alert("PRESS ENTER AND RECALL DATA ! ! ! ! ! ! ! ! ")
+				
 
 				default:
 					;
@@ -299,7 +305,7 @@
 		}
 	</script>
 	<br>
-	<a href="baseball_scoresheet.html">Baseball Scoring Page</a>
+	<a id="baseball_link" href="baseball_scoresheet.html">Baseball Scoring Page</a>
 	<br>
 	<br>
 	<br>
