--- a/football_scoresheet.html
+++ b/football_scoresheet.html
@@ -8,6 +8,10 @@
 	background-color: lightgreen;
 }
 
+button {
+	background-color: lightblue;
+}
+
 #hometeam {
 	font-size: 50px;
 }
@@ -46,7 +50,22 @@
 			</tr>
 		</table>
 		<br>
+		<table>
+			<tr>
+				<td>PUNT</td>
+			</tr>
+			<tr>
+				<td><button onclick="">Touchback/Faircatch</button></td>
+				<td><button onclick="">Return</button></td>
+				<td><button onclick="">-</button></td>
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id='touchback'></td>
+				<td><input size="5" type="text" value="123" id='return'></td>
+			</tr>
+		</table>
 	</div>
+	<br>
 
 	<div>
 		<table>
@@ -73,23 +92,47 @@
 					size="5" type="text" value="123" id=''>
 			</tr>
 
-		</table>
-		<br>
-		<table>
 			<tr>
-				<td>PLAYS</td>
+				<td>4thDOWN CONV</td>
 			</tr>
 			<tr>
-				<td><button onclick="">RUN</button</td>
+				<td><button onclick="">YES</button>
+					<button onclick="">NO</button></td>
+			</tr>
 
-				<bu
-				tton onclick="">TFL</button>
-				</td>
+
+			<tr>
+				<td><input size="5" type="text" value="123" id=''> <input
+					size="5" type="text" value="123" id=''>
+			</tr>
+
+		</table>
+		<br>
+		<div>OFFENSIVE PLAYS</div>
+		<table>
+
+			<tr>
+				<td><button onclick="">RUN</button</td>
+				<td><button onclick="">FUMBLE</button></td>
 				<td><button onclick="">PASS</button></td>
 				<td><button onclick="">COMPL</button></td>
 				<td><button onclick="">INCOMP</button></td>
+				<td><button onclick="">INTERCEPT</button></td>
+				<td><button onclick="">TD PASS</button></td>
+				<td><button onclick="">TD RUN</button></td>
+				<td><button onclick="">PAT</button></td>
+				<td><button onclick="">TD FG</button></td>
+				<td><button onclick="">2PT CONV</button></td>
 			</tr>
+
 			<tr>
+
+				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id=''></td>
 				<td><input size="5" type="text" value="123" id=''></td>
 				<td><input size="5" type="text" value="123" id=''></td>
 				<td><input size="5" type="text" value="123" id=''></td>
@@ -97,7 +140,63 @@
 				<td><input size="5" type="text" value="123" id=''></td>
 
 			</tr>
+
+
 		</table>
+
+		<table>
+			<tr>
+				<td><button onclick="">PENETRATE 50</button</td>
+				<td><button onclick="">PENETRATE 20</button</td>
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id=''></td>
+			</tr>
+		</table>
+
+
+
+		<table>
+			<tr>
+				<td><button onclick="">OFFENSIVE PENALTIES</button</td>
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id=''></td>
+			</tr>
+		</table>
+		<br>
+		<div>DEFFENSIVE PLAYS</div>
+		<table>
+
+			<tr>
+				<td><button onclick="">TFL</button</td>
+				<td><button onclick="">FUMBLE REC.</button></td>
+				<td><button onclick="">INTERC.</button></td>
+				<td><button onclick="">SACK</button></td>
+
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id=''></td>
+
+			</tr>
+		</table>
+
+		<div></div>
+		<table>
+
+			<tr>
+				<td><button onclick="">DEFENSIVE PENALTIES</button</td>
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id=''></td>
+			</tr>
+		</table>
+
+
 	</div>
 </body>
 </html>
