--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8">
 <title>YOUR SPORTS CONNECTION</title>
 <style type="text/css">
-
+#body {
+	background-color: lightgreen;
+}
 </style>
 </head>
 <body id="body">
@@ -305,18 +307,17 @@
 	<br>
 	<br>
 	<hr>
-	
+
 	<br>
-	
+
 	<div>
-		Enter The   Home   Team <input type="text" placeholder="Home Team"
+		Enter The Home Team <input type="text" placeholder="Home Team"
 			style="text-transform: uppercase" maxlength="20" size="20"
-			id="homefootballteam"> <br> 
-		Enter The Visitor Team <input
+			id="homefootballteam"> <br> Enter The Visitor Team <input
 			type="text" placeholder="Visitor Team"
 			style="text-transform: uppercase" maxlength="20" size="20"
-			id="visitorfootballteam"> <br>
-			<a href="football_scoresheet.html">Football Scoring Page</a>
+			id="visitorfootballteam"> <br> <a
+			href="football_scoresheet.html">Football Scoring Page</a>
 	</div>
 	<br>
 	<br>
