--- a/football_scoresheet.html
+++ b/football_scoresheet.html
@@ -16,7 +16,7 @@ button {
 	font-size: 50px;
 }
 
-#thehometeam {
+#thehometeam, #thevisitorteam {
 	font-size: 50px;
 }
 
@@ -45,8 +45,8 @@ button {
 				<td><button onclick="">-</button></td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='touchback'></td>
-				<td><input size="5" type="text" value="123" id='return'></td>
+				<td><input size="5" type="text" value="123" id='touchbackhome'></td>
+				<td><input size="5" type="text" value="123" id='kickreturnhome'></td>
 			</tr>
 		</table>
 		<br>
@@ -60,8 +60,8 @@ button {
 				<td><button onclick="">-</button></td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='touchback'></td>
-				<td><input size="5" type="text" value="123" id='return'></td>
+				<td><input size="5" type="text" value="123" id='puntfaircatchhome'></td>
+				<td><input size="5" type="text" value="123" id='puntreturnhome'></td>
 			</tr>
 		</table>
 	</div>
@@ -77,7 +77,7 @@ button {
 					<button onclick="">-</button></td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id=''>
+				<td><input size="5" type="text" value="123" id='1stdnhome'>
 			</tr>
 
 			<tr>
@@ -88,8 +88,8 @@ button {
 					<button onclick="">NO</button></td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id=''> <input
-					size="5" type="text" value="123" id=''>
+				<td><input size="5" type="text" value="123" id='3rddnhomeyes'> <input
+					size="5" type="text" value="123" id='3rddnhomeno'>
 			</tr>
 
 			<tr>
@@ -102,8 +102,180 @@ button {
 
 
 			<tr>
-				<td><input size="5" type="text" value="123" id=''> <input
-					size="5" type="text" value="123" id=''>
+				<td><input size="5" type="text" value="123" id='4thdnhomeyes'> <input
+					size="5" type="text" value="123" id='4thdnhomeno'>
+			</tr>
+
+		</table>
+		<br>
+		<div>OFFENSIVE PLAYS</div>
+		<table>
+
+			<tr>
+				<td><button onclick="">RUN</button</td>
+				<td><button onclick="">FUMBLE</button></td>
+				<td><button onclick="">PASS</button></td>
+				<td><button onclick="">COMPL</button></td>
+				<td><button onclick="">INCOMP</button></td>
+				<td><button onclick="">INTERCEPT</button></td>
+				<td><button onclick="">TD PASS</button></td>
+				<td><button onclick="">TD RUN</button></td>
+				<td><button onclick="">PAT</button></td>
+				<td><button onclick="">FG</button></td>
+				<td><button onclick="">2PT CONV</button></td>
+			</tr>
+
+			<tr>
+
+				<td><input size="5" type="text" value="123" id='runhome'></td>
+				<td><input size="5" type="text" value="123" id='fumblehome'></td>
+				<td><input size="5" type="text" value="123" id='passhome'></td>
+				<td><input size="5" type="text" value="123" id='complhome'></td>
+				<td><input size="5" type="text" value="123" id='incomphome'></td>
+				<td><input size="5" type="text" value="123" id='interchome'></td>
+				<td><input size="5" type="text" value="123" id='tdpasshome'></td>
+				<td><input size="5" type="text" value="123" id='tdrunhome'></td>
+				<td><input size="5" type="text" value="123" id='pathome'></td>
+				<td><input size="5" type="text" value="123" id='fghome'></td>
+				<td><input size="5" type="text" value="123" id='2pthome'></td>
+
+			</tr>
+
+
+		</table>
+
+		<table>
+			<tr>
+				<td><button onclick="">PENETRATE 50</button</td>
+				<td><button onclick="">PENETRATE 20</button</td>
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id='penet50home'></td>
+				<td><input size="5" type="text" value="123" id='penet20home'></td>
+			</tr>
+		</table>
+
+
+
+		<table>
+			<tr>
+				<td><button onclick="">OFFENSIVE PENALTIES</button</td>
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id='offpenhome'></td>
+			</tr>
+		</table>
+		<br>
+		<div>DEFFENSIVE PLAYS</div>
+		<table>
+
+			<tr>
+				<td><button onclick="">TFL</button</td>
+				<td><button onclick="">FUMBLE REC.</button></td>
+				<td><button onclick="">INTERC.</button></td>
+				<td><button onclick="">SACK</button></td>
+
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id='tflhome'></td>
+				<td><input size="5" type="text" value="123" id='fumrechome'></td>
+				<td><input size="5" type="text" value="123" id='interchome'></td>
+				<td><input size="5" type="text" value="123" id='sackhome'></td>
+
+			</tr>
+		</table>
+
+		<div></div>
+		<table>
+
+			<tr>
+				<td><button onclick="">DEFENSIVE PENALTIES</button</td>
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id='defpenhome'></td>
+			</tr>
+		</table>
+
+
+	</div>
+	
+	<h1 id="hometeam">VISITOR TEAM</h1>
+	<input size="5" type="text" value="team" id='thevisitorteam'>
+	<br>
+	<br>
+	<br>
+	<br>
+	
+	<div>
+		<table>
+			<tr>
+				<td>KICKOFF</td>
+			</tr>
+			<tr>
+				<td><button onclick="">Touchback</button></td>
+				<td><button onclick="">Return</button></td>
+				<td><button onclick="">-</button></td>
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id='touchbackvisitor'></td>
+				<td><input size="5" type="text" value="123" id='kickreturnvisitor'></td>
+			</tr>
+		</table>
+		<br>
+		<table>
+			<tr>
+				<td>PUNT</td>
+			</tr>
+			<tr>
+				<td><button onclick="">Touchback/Faircatch</button></td>
+				<td><button onclick="">Return</button></td>
+				<td><button onclick="">-</button></td>
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id='puntfaircatchvisitor'></td>
+				<td><input size="5" type="text" value="123" id='puntreturnvisitor'></td>
+			</tr>
+		</table>
+	</div>
+	<br>
+
+	<div>
+		<table>
+			<tr>
+				<td>1stDOWNS</td>
+			</tr>
+			<tr>
+				<td><button onclick="">+</button>
+					<button onclick="">-</button></td>
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id='1stdnvisitor'>
+			</tr>
+
+			<tr>
+				<td>3rdDOWN CONV</td>
+			</tr>
+			<tr>
+				<td><button onclick="">YES</button>
+					<button onclick="">NO</button></td>
+			</tr>
+			<tr>
+				<td><input size="5" type="text" value="123" id='3rddnvisitoryes'> <input
+					size="5" type="text" value="123" id='3rddnvisitorno'>
+			</tr>
+
+			<tr>
+				<td>4thDOWN CONV</td>
+			</tr>
+			<tr>
+				<td><button onclick="">YES</button>
+					<button onclick="">NO</button></td>
+			</tr>
+
+
+			<tr>
+				<td><input size="5" type="text" value="123" id='4thdnvisitoryes'> <input
+					size="5" type="text" value="123" id='4thdnvisitorno'>
 			</tr>
 
 		</table>
@@ -127,17 +299,17 @@ button {
 
 			<tr>
 
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id='runvisitor'></td>
+				<td><input size="5" type="text" value="123" id='fumblevisitor'></td>
+				<td><input size="5" type="text" value="123" id='passvisitor'></td>
+				<td><input size="5" type="text" value="123" id='complvisitor'></td>
+				<td><input size="5" type="text" value="123" id='incompvisitor'></td>
+				<td><input size="5" type="text" value="123" id='intercvisitor'></td>
+				<td><input size="5" type="text" value="123" id='tdpassvisitor'></td>
+				<td><input size="5" type="text" value="123" id='tdrunvisitor'></td>
+				<td><input size="5" type="text" value="123" id='patvisitor'></td>
+				<td><input size="5" type="text" value="123" id='fgvisitor'></td>
+				<td><input size="5" type="text" value="123" id='2ptvisitor'></td>
 
 			</tr>
 
@@ -150,8 +322,8 @@ button {
 				<td><button onclick="">PENETRATE 20</button</td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id='penet50visitor'></td>
+				<td><input size="5" type="text" value="123" id='penet20visitor'></td>
 			</tr>
 		</table>
 
@@ -162,7 +334,7 @@ button {
 				<td><button onclick="">OFFENSIVE PENALTIES</button</td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id='offpenvisitor'></td>
 			</tr>
 		</table>
 		<br>
@@ -177,10 +349,10 @@ button {
 
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
-				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id='tflvisitor'></td>
+				<td><input size="5" type="text" value="123" id='fumrecvisitor'></td>
+				<td><input size="5" type="text" value="123" id='interdvisitor'></td>
+				<td><input size="5" type="text" value="123" id='sachvisitor'></td>
 
 			</tr>
 		</table>
@@ -192,7 +364,7 @@ button {
 				<td><button onclick="">DEFENSIVE PENALTIES</button</td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id=''></td>
+				<td><input size="5" type="text" value="123" id='defpenvisitor'></td>
 			</tr>
 		</table>
 
