--- a/football_scoresheet.html
+++ b/football_scoresheet.html
@@ -26,7 +26,7 @@ button {
 </style>
 </head>
 <body id="body">
-
+<script type="text/javascript" src="script6.js"></script>
 	<h1 id="hometeam">HOME TEAM</h1>
 	<input size="5" type="text" value="team" id='thehometeam'>
 	<br>
@@ -40,13 +40,13 @@ button {
 				<td>KICKOFF</td>
 			</tr>
 			<tr>
-				<td><button onclick="">Touchback</button></td>
-				<td><button onclick="">Return</button></td>
+				<td><button onclick="touchbackhome();">Touchback</button></td>
+				<td><button onclick="kickreturnhome();">Return</button></td>
 				<td><button onclick="">-</button></td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='touchbackhome'></td>
-				<td><input size="5" type="text" value="123" id='kickreturnhome'></td>
+				<td><input size="5" type="text" value="0" id='touchbackhome'></td>
+				<td><input size="5" type="text" value="0" id='kickreturnhome'></td>
 			</tr>
 		</table>
 		<br>
@@ -60,8 +60,8 @@ button {
 				<td><button onclick="">-</button></td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='puntfaircatchhome'></td>
-				<td><input size="5" type="text" value="123" id='puntreturnhome'></td>
+				<td><input size="5" type="text" value="0" id='puntfaircatchhome'></td>
+				<td><input size="5" type="text" value="0" id='puntreturnhome'></td>
 			</tr>
 		</table>
 	</div>
@@ -77,7 +77,7 @@ button {
 					<button onclick="">-</button></td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='1stdnhome'>
+				<td><input size="5" type="text" value="0" id='1stdnhome'>
 			</tr>
 
 			<tr>
@@ -88,8 +88,8 @@ button {
 					<button onclick="">NO</button></td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='3rddnhomeyes'> <input
-					size="5" type="text" value="123" id='3rddnhomeno'>
+				<td><input size="5" type="text" value="0" id='3rddnhomeyes'> <input
+					size="5" type="text" value="0" id='3rddnhomeno'>
 			</tr>
 
 			<tr>
@@ -102,8 +102,8 @@ button {
 
 
 			<tr>
-				<td><input size="5" type="text" value="123" id='4thdnhomeyes'> <input
-					size="5" type="text" value="123" id='4thdnhomeno'>
+				<td><input size="5" type="text" value="0" id='4thdnhomeyes'> <input
+					size="5" type="text" value="0" id='4thdnhomeno'>
 			</tr>
 
 		</table>
@@ -127,17 +127,17 @@ button {
 
 			<tr>
 
-				<td><input size="5" type="text" value="123" id='runhome'></td>
-				<td><input size="5" type="text" value="123" id='fumblehome'></td>
-				<td><input size="5" type="text" value="123" id='passhome'></td>
-				<td><input size="5" type="text" value="123" id='complhome'></td>
-				<td><input size="5" type="text" value="123" id='incomphome'></td>
-				<td><input size="5" type="text" value="123" id='interchome'></td>
-				<td><input size="5" type="text" value="123" id='tdpasshome'></td>
-				<td><input size="5" type="text" value="123" id='tdrunhome'></td>
-				<td><input size="5" type="text" value="123" id='pathome'></td>
-				<td><input size="5" type="text" value="123" id='fghome'></td>
-				<td><input size="5" type="text" value="123" id='2pthome'></td>
+				<td><input size="5" type="text" value="0" id='runhome'></td>
+				<td><input size="5" type="text" value="0" id='fumblehome'></td>
+				<td><input size="5" type="text" value="0" id='passhome'></td>
+				<td><input size="5" type="text" value="0" id='complhome'></td>
+				<td><input size="5" type="text" value="0" id='incomphome'></td>
+				<td><input size="5" type="text" value="0" id='interchome'></td>
+				<td><input size="5" type="text" value="0" id='tdpasshome'></td>
+				<td><input size="5" type="text" value="0" id='tdrunhome'></td>
+				<td><input size="5" type="text" value="0" id='pathome'></td>
+				<td><input size="5" type="text" value="0" id='fghome'></td>
+				<td><input size="5" type="text" value="0" id='2pthome'></td>
 
 			</tr>
 
@@ -150,8 +150,8 @@ button {
 				<td><button onclick="">PENETRATE 20</button</td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='penet50home'></td>
-				<td><input size="5" type="text" value="123" id='penet20home'></td>
+				<td><input size="5" type="text" value="0" id='penet50home'></td>
+				<td><input size="5" type="text" value="0" id='penet20home'></td>
 			</tr>
 		</table>
 
@@ -162,7 +162,7 @@ button {
 				<td><button onclick="">OFFENSIVE PENALTIES</button</td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='offpenhome'></td>
+				<td><input size="5" type="text" value="0" id='offpenhome'></td>
 			</tr>
 		</table>
 		<br>
@@ -177,10 +177,10 @@ button {
 
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='tflhome'></td>
-				<td><input size="5" type="text" value="123" id='fumrechome'></td>
-				<td><input size="5" type="text" value="123" id='interchome'></td>
-				<td><input size="5" type="text" value="123" id='sackhome'></td>
+				<td><input size="5" type="text" value="0" id='tflhome'></td>
+				<td><input size="5" type="text" value="0" id='fumrechome'></td>
+				<td><input size="5" type="text" value="0" id='interchome'></td>
+				<td><input size="5" type="text" value="0" id='sackhome'></td>
 
 			</tr>
 		</table>
@@ -192,7 +192,7 @@ button {
 				<td><button onclick="">DEFENSIVE PENALTIES</button</td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='defpenhome'></td>
+				<td><input size="5" type="text" value="0" id='defpenhome'></td>
 			</tr>
 		</table>
 
@@ -217,8 +217,8 @@ button {
 				<td><button onclick="">-</button></td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='touchbackvisitor'></td>
-				<td><input size="5" type="text" value="123" id='kickreturnvisitor'></td>
+				<td><input size="5" type="text" value="0" id='touchbackvisitor'></td>
+				<td><input size="5" type="text" value="0" id='kickreturnvisitor'></td>
 			</tr>
 		</table>
 		<br>
@@ -232,8 +232,8 @@ button {
 				<td><button onclick="">-</button></td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='puntfaircatchvisitor'></td>
-				<td><input size="5" type="text" value="123" id='puntreturnvisitor'></td>
+				<td><input size="5" type="text" value="0" id='puntfaircatchvisitor'></td>
+				<td><input size="5" type="text" value="0" id='puntreturnvisitor'></td>
 			</tr>
 		</table>
 	</div>
@@ -249,7 +249,7 @@ button {
 					<button onclick="">-</button></td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='1stdnvisitor'>
+				<td><input size="5" type="text" value="0" id='1stdnvisitor'>
 			</tr>
 
 			<tr>
@@ -260,8 +260,8 @@ button {
 					<button onclick="">NO</button></td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='3rddnvisitoryes'> <input
-					size="5" type="text" value="123" id='3rddnvisitorno'>
+				<td><input size="5" type="text" value="0" id='3rddnvisitoryes'> <input
+					size="5" type="text" value="0" id='3rddnvisitorno'>
 			</tr>
 
 			<tr>
@@ -274,8 +274,8 @@ button {
 
 
 			<tr>
-				<td><input size="5" type="text" value="123" id='4thdnvisitoryes'> <input
-					size="5" type="text" value="123" id='4thdnvisitorno'>
+				<td><input size="5" type="text" value="0" id='4thdnvisitoryes'> <input
+					size="5" type="text" value="0" id='4thdnvisitorno'>
 			</tr>
 
 		</table>
@@ -299,17 +299,17 @@ button {
 
 			<tr>
 
-				<td><input size="5" type="text" value="123" id='runvisitor'></td>
-				<td><input size="5" type="text" value="123" id='fumblevisitor'></td>
-				<td><input size="5" type="text" value="123" id='passvisitor'></td>
-				<td><input size="5" type="text" value="123" id='complvisitor'></td>
-				<td><input size="5" type="text" value="123" id='incompvisitor'></td>
-				<td><input size="5" type="text" value="123" id='intercvisitor'></td>
-				<td><input size="5" type="text" value="123" id='tdpassvisitor'></td>
-				<td><input size="5" type="text" value="123" id='tdrunvisitor'></td>
-				<td><input size="5" type="text" value="123" id='patvisitor'></td>
-				<td><input size="5" type="text" value="123" id='fgvisitor'></td>
-				<td><input size="5" type="text" value="123" id='2ptvisitor'></td>
+				<td><input size="5" type="text" value="0" id='runvisitor'></td>
+				<td><input size="5" type="text" value="0" id='fumblevisitor'></td>
+				<td><input size="5" type="text" value="0" id='passvisitor'></td>
+				<td><input size="5" type="text" value="0" id='complvisitor'></td>
+				<td><input size="5" type="text" value="0" id='incompvisitor'></td>
+				<td><input size="5" type="text" value="0" id='intercvisitor'></td>
+				<td><input size="5" type="text" value="0" id='tdpassvisitor'></td>
+				<td><input size="5" type="text" value="0" id='tdrunvisitor'></td>
+				<td><input size="5" type="text" value="0" id='patvisitor'></td>
+				<td><input size="5" type="text" value="0" id='fgvisitor'></td>
+				<td><input size="5" type="text" value="0" id='2ptvisitor'></td>
 
 			</tr>
 
@@ -322,8 +322,8 @@ button {
 				<td><button onclick="">PENETRATE 20</button</td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='penet50visitor'></td>
-				<td><input size="5" type="text" value="123" id='penet20visitor'></td>
+				<td><input size="5" type="text" value="0" id='penet50visitor'></td>
+				<td><input size="5" type="text" value="0" id='penet20visitor'></td>
 			</tr>
 		</table>
 
@@ -334,7 +334,7 @@ button {
 				<td><button onclick="">OFFENSIVE PENALTIES</button</td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='offpenvisitor'></td>
+				<td><input size="5" type="text" value="0" id='offpenvisitor'></td>
 			</tr>
 		</table>
 		<br>
@@ -349,10 +349,10 @@ button {
 
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='tflvisitor'></td>
-				<td><input size="5" type="text" value="123" id='fumrecvisitor'></td>
-				<td><input size="5" type="text" value="123" id='interdvisitor'></td>
-				<td><input size="5" type="text" value="123" id='sachvisitor'></td>
+				<td><input size="5" type="text" value="0" id='tflvisitor'></td>
+				<td><input size="5" type="text" value="0" id='fumrecvisitor'></td>
+				<td><input size="5" type="text" value="0" id='interdvisitor'></td>
+				<td><input size="5" type="text" value="0" id='sachvisitor'></td>
 
 			</tr>
 		</table>
@@ -364,7 +364,7 @@ button {
 				<td><button onclick="">DEFENSIVE PENALTIES</button</td>
 			</tr>
 			<tr>
-				<td><input size="5" type="text" value="123" id='defpenvisitor'></td>
+				<td><input size="5" type="text" value="0" id='defpenvisitor'></td>
 			</tr>
 		</table>
 
