--- a/index.html
+++ b/index.html
@@ -316,8 +316,9 @@
 			id="homefootballteam"> <br> Enter The Visitor Team <input
 			type="text" placeholder="Visitor Team"
 			style="text-transform: uppercase" maxlength="20" size="20"
-			id="visitorfootballteam"> <br> <a
-			href="football_scoresheet.html">Football Scoring Page</a>
+			id="visitorfootballteam"> 
+			<br> 
+			<a href="football_sc_h.html">Football Scoring Page</a>
 	</div>
 	<br>
 	<br>
